# gmrender-resurrect

./: .editorconfig  .gitignore  AUTHORS  Dockerfile  INSTALL.md  Makefile.am  NEWS  README  README.md  configure.ac  configure.in  gmediarender-0.0.7.tar.bz2  shell.nix
contribs/: Makefile.am  output_mpg123.c  sound_module.c  sound_module.h  webclient.c  webclient.h
data/: Makefile.am
dist-scripts/arch/: README
dist-scripts/centos7/: README.md  gmediarender.service  gmediarender.spec  gmediarender.xml
dist-scripts/debian/: README  README.Debian  changelog  control  copyright  docs  gmediarender.1  gmrender-resurrect-pre.service  gmrender-resurrect.default  gmrender-resurrect.init  gmrender-resurrect.service  manpages  org.mpris.MediaPlayer2.gmediarender.conf  rules  watch
dist-scripts/fedora/: README.md  gmediarender.service  gmediarender.spec  ssdp.xml
scripts/: gmrender-resurrect-mpris-policy.conf
scripts/init.d/: README  gmediarenderer
scripts/logrotate.d/: gmediarender
scripts/systemd/: README.md  gmediarender-wrapper  gmediarender.conf  gmediarender.service
src/: Makefile.am  gmrender_list.c  gmrender_list.h  logging.c  logging.cc  logging.h  main.c  main.cc  mime_type_filter.h  mime_types.c  mime_types.h  mpris_notification.c  mpris_notification.h  oh_info.c  oh_info.h  oh_playlist.c  oh_playlist.h  oh_product.c  oh_product.h  oh_source.c  oh_source.h  oh_time.c  oh_time.h  oh_volume.c  oh_volume.h  output.c  output.cc  output.h  output_dummy.c  output_dummy.h  output_gstreamer.c  output_gstreamer.cc  output_gstreamer.h  output_module.c  output_module.h  output_mpg123.c  output_mpg123.h  output_mpv.c  output_mpv.h  playlist.c  (+46 more)
src/mpris-spec/: all.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.Playlists.xml  org.mpris.MediaPlayer2.TrackList.xml  org.mpris.MediaPlayer2.xml
src/pugixml/: pugiconfig.hpp
